Added flow-bin in before_script

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ node_js:
 sudo: false
 
 before_script:
+  - npm install -g flow-bin
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
