--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ node_js:
 sudo: false
 
 before_script:
-  - npm install -g flow-bin
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - "npm install -g flow-bin"
 
 script:
   - npm run lint
