--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - "npm install -g flow-bin"
+
+before_install:
+  - npm install -g flow-bin
 
 script:
   - npm run lint
