--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 before_install:
-  - npm install -g flow-bin
+  - npm install -g flow-bin@0.70.0
 
 script:
   - npm run lint
